# renimadden

./: CMakeLists.txt  Doxyfile  README  board.cpp  board.h  main.cpp  move.cpp  move.h  playerid.h
src/: CMakeLists.txt  board.cpp  board.h  boardinfo.h  game.cpp  game.h  listener.cpp  listener.h  main.cpp  move.cpp  move.h  playerid.h
src/curses/: CMakeLists.txt  curseslistener.cpp  curseslistener.h  interface.txt  main.cpp
tests/: CMakeLists.txt  boardtest.h  main.cpp
