PROJECT(ReniMadden)

#SET(CMAKE_VERBOSE_MAKEFILE ON)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src/ncurses)
ADD_SUBDIRECTORY(tests)

FIND_PACKAGE(Curses)
FIND_PACKAGE(Doxygen)
IF (DOXYGEN_FOUND)
  ADD_CUSTOM_TARGET(doc ${DOXYGEN_EXECUTABLE}
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
ENDIF (DOXYGEN_FOUND)
